--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDbConnection": "Server=(localdb)\\mssqllocaldb;Database=MyDatabaseContext-ca7b86aa-ade2-4db1-a4a9-4dce925cb814;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AZURE_POSTGRESQL_CONNECTIONSTRING": "Server=msdocs-core-sql-ali-server.postgres.database.azure.com;Database=msdocs-core-sql-ali-database;Port=5432;Ssl Mode=Require;User Id=mejbuyhlbt;Password=O456FL88L5U68D3C$;"
   }
 }
