--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AZURE_POSTGRESQL_CONNECTIONSTRING": "Server=msdocs-core-sql-ali-server.postgres.database.azure.com;Database=msdocs-core-sql-ali-database;Port=5432;Ssl Mode=Require;User Id=mejbuyhlbt;Password=O456FL88L5U68D3C$;"
+    "AZURE_POSTGRESQL_CONNECTIONSTRING": "Server=msdocs-core-sql-ali-server.postgres.database.azure.com;Database=msdocs-core-sql-ali-database;Port=5432;Ssl Mode=Require;User Id=mejbuyhlbt;Password=O456FL88L5U68D3C$;Trust Server Certificate=true;"
   }
 }
